test/should_pass/basic_013.grg
actions basic_013;

rule r {
	pattern {
		x : Node;
	}
	modify {
		x --> y : Node;
	}
}

