test/should_fail/ret_007.grg
actions ret_007;

rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		return(x);
	}
}

